@@ -1,0 +1,67 @@
+/* XPM */
+static const char *copy[]={
+"22 22 42 1",
+". c None",
+"a c #9c9cb6",
+"p c #c9c9da",
+"v c #ccccdb",
+"u c #cecedd",
+"# c #d0d0df",
+"H c #d2d2e0",
+"j c #d3d3e1",
+"G c #d5d5e4",
+"o c #d7d7e5",
+"K c #d8d8e6",
+"t c #dadae7",
+"J c #dbdbe8",
+"I c #dcdce9",
+"L c #dedeeb",
+"y c #e0e0ec",
+"M c #e1e1ed",
+"N c #e4e4ee",
+"A c #e5e5ef",
+"n c #e6e6f0",
+"x c #e7e7f0",
+"D c #e8e8f1",
+"e c #e9e9f2",
+"C c #eaeaf3",
+"f c #ebebf4",
+"i c #ececf4",
+"s c #eeeef5",
+"k c #efeff6",
+"B c #f0f0f7",
+"m c #f1f1f8",
+"r c #f2f2f9",
+"w c #f3f3f9",
+"E c #f4f4fa",
+"d c #f5f5fc",
+"z c #f6f6fd",
+"h c #f8f8fe",
+"c c #f9f9fe",
+"F c #fafaff",
+"g c #fcfcff",
+"l c #fdfdff",
+"q c #fefeff",
+"b c #ffffff",
+".########a............",
+".#bbbcdef#a...........",
+".#bbbghif#ja..........",
+".#bbbgckfaaaa.........",
+".#bbblcmfnopa.........",
+".#bbbqgrstuva.........",
+".#bbbbgwf########a....",
+".#bbqcdxy#bbbcdef#a...",
+".#bqlzsnA#bbbghif#ja..",
+".#bbcBsCD#bbbgckfaaaa.",
+".#blEmkfC#bbblcmfnopa.",
+".#bFwmkfC#bbbqgrstuva.",
+".#bdwmBsC#bbbbgwfGH#a.",
+".#bwrBkiC#bbqcdxyIJKa.",
+".#gwwmkfC#bqlzsnAyLIa.",
+".aaaaaaaa#bbcBsCDAMya.",
+".........#blEmkfCnNya.",
+".........#bFwmkfCxAMa.",
+".........#bdwmBsCxAMa.",
+".........#bwrBkiCnAMa.",
+".........#gwwmkfCxAMa.",
+".........aaaaaaaaaaaa."};
